TODOs removed for the use case advance